Sema: Diagnose DynamicSelfType usages inside stored property initializers

A stored property initializer does not have access to either the
'self' instance or the 'Self' type, so SILGen would just crash
when emitting one containing a reference to 'Self'.

With some work on SILGen we could probably allow this, but for
now let's diagnose instead of crashing.

Fixes <rdar://problem/51561208>, <https://bugs.swift.org/browse/SR-10969>.