lib/Sema/TypeCheckCaptures.cpp
@@ -104,6 +104,10 @@ public:
     return GenericParamCaptureLoc;
   }
 
+  SourceLoc getDynamicSelfCaptureLoc() const {
+    return DynamicSelfCaptureLoc;
+  }
+
   /// Check if the type of an expression references any generic
   /// type parameters, or the dynamic Self type.
   ///
@@ -786,6 +790,11 @@ void TypeChecker::checkPatternBindingCaptures(NominalTypeDecl *typeDecl) {
                               /*NoEscape=*/false,
                               /*ObjC=*/false);
       init->walk(finder);
+
+      if (finder.getDynamicSelfCaptureLoc().isValid()) {
+        diagnose(finder.getDynamicSelfCaptureLoc(),
+                 diag::dynamic_self_stored_property_init);
+      }
 
       auto captures = finder.getCaptureInfo();
       PBD->setCaptureInfo(i, captures);
